# LatticeExamplev3

./: README.md
LatticeExamplev3/: .gitignore  CMakeLists.txt  HowTo.md  README.md
LatticeExamplev3/AutoGen/: LatticeAutoGen.py
LatticeExamplev3/AutoGen/lib/: CMakeLists.txt  lattice_func_params.yaml  lattice_postproc.hpp  lattice_preproc.hpp
LatticeExamplev3/lib/: CMakeLists.txt  lattice.c  lattice.h
LatticeExamplev3/scripts/: Myscript.bat
__MACOSX/: ._LatticeExamplev3
__MACOSX/LatticeExamplev3/: ._README.md  ._lib
